# ctranslate2-src

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: release.yml
build-support/: Cargo.toml
build-support/src/: a.rs  dnnl.rs  download.rs  file_changes.rs  lib.rs  link.rs  native.rs  submodules.rs  windows_crt_patch.rs
compute_type/: sidebar-items.js
ctranslate2/: Cargo.toml  all.html  index.html  sidebar-items.js
ctranslate2-src/: Cargo.toml  build.rs
ctranslate2-sys/: Cargo.toml  build.rs
ctranslate2-sys/cpp/: translator_wrapper.cpp
ctranslate2-sys/include/: translator_wrapper.h
ctranslate2-sys/src/: lib.rs
ctranslate2/compute_type/: enum.ComputeType.html  index.html
ctranslate2/device/: enum.Device.html  index.html
ctranslate2/examples/: bart.rs
ctranslate2/src/: compute_type.rs  device.rs  lib.rs  translator.rs  translator2.rs
ctranslate2/src/tokenizer/: bpe.rs  hf.rs  mod.rs  rust_tokenizers.rs  sentencepiece.rs
ctranslate2/tokenizer/: sidebar-items.js  trait.Tokenizer.html
ctranslate2/tokenizer/rust_tokenizers/: sidebar-items.js
ctranslate2/translator/: enum.BatchType.html  enum.TranslatorError.html  index.html  struct.TranslatorConfig.html
ctranslate2/translator2/: index.html
device/: sidebar-items.js
src/ctranslate2/: compute_type.rs.html  device.rs.html  lib.rs.html  translator.rs.html  translator2.rs.html
src/ctranslate2/tokenizer/: mod.rs.html  rust_tokenizers.rs.html
src/ctranslate2_sys/: lib.rs.html
tokenizer/: index.html
tokenizer/rust_tokenizers/: index.html  struct.SentenceTokenizer.html
translator/: sidebar-items.js  struct.TranslationOptions.html  struct.TranslationResult.html  struct.Translator.html
translator2/: sidebar-items.js  struct.Translator2.html
