[package]
name = "ctranslate2-src-build-support"
version = "0.1.0"
edition = "2024"
description = "Build support for ctranslate2-src"
license = "MIT"

[dependencies]
ureq = "3.1.2"
flate2 = "1.1.3"
tar = "0.4.44"
cmake = "0.1.54"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.145"
