[package]
name = "ctranslate2"
version = "2.0.0"
edition = "2024"

[dependencies]
ctranslate2-sys.workspace = true
anyhow = "1.0.100"
sentencepiece = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
rust_tokenizers = { workspace = true, optional = true }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"

[features]
default = ["rust_tokenizers"]
sentencepiece = ["dep:sentencepiece"]
tokenizers = ["dep:tokenizers"]
rust_tokenizers = ["dep:rust_tokenizers"]

[[example]]
name = "bart"
